AuthService 추가, GrantedRole 변경, JwtUtils 기능 추가, Diary 엔티티 변경
회원 가입 및 토큰 발급을 위한 AuthService 추가
회원 권한과 관련된 GrantedRole Enum명 변경
JwtUtils에 RefreshToken 발급을 위한 기능 추가
Diary 엔티티 필드 길이 변경

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto=create
 
 farmdiary.api.jwtSecret=testsecret
 farmdiary.api.jwtExpirationMs= 1200000
+farmdiary.api.jwtRefreshExpirationMs= 12000000
