feat: 리프레시 토큰을 Redis에 저장하도록 변경

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=create
 farmdiary.api.jwtSecret=testsecret
 farmdiary.api.jwtExpirationMs= 1200000
 farmdiary.api.jwtRefreshExpirationMs= 12000000
+
+farmdiary.api.redis.refreshToken.key = "refreshtoken:"
+farmdiary.api.redis.refreshToken.expire = 1200
