chore: properties 띄어쓰기 제거

--- a/src/main/resources/application-local-value.properties
+++ b/src/main/resources/application-local-value.properties
@@ -1,6 +1,6 @@
 farmdiary.api.jwtSecret=localsecret
-farmdiary.api.jwtExpirationMs= 3600000
-farmdiary.api.jwtRefreshExpirationMs= 864000000
+farmdiary.api.jwtExpirationMs=3600000
+farmdiary.api.jwtRefreshExpirationMs=864000000
 
-farmdiary.api.redis.refreshToken.key = refreshtoken:
-farmdiary.api.redis.refreshToken.expire = 863820
+farmdiary.api.redis.refreshToken.key=refreshtoken:
+farmdiary.api.redis.refreshToken.expire=863820
